# macroquad_template

./: Cargo.toml  README.md  justfile
assets/mq_js_bundle/: mq_js_bundle.js
src/: animation.rs  main.rs
